Fix error message when pointer at the gap zone

--- a/Brute-Forcing/style.css
+++ b/Brute-Forcing/style.css
@@ -48,6 +48,7 @@
 
 .resize_field {
     position: absolute;
+    top: 0;
     right: 0;
     height: 155px;
     width: 10px;
